# SahajCode

./: .gitignore  README.md  SahajCode_PRD_v2.0.md  pyproject.toml  sahajcode.py
.github/workflows/: ci.yml
docs/: guide_en.md  guide_ne.md  teacher_guide.md
docs/lessons/: lesson_01.md  lesson_02.md  lesson_03.md
sahajcode/: ast_nodes.py  cli.py  codegen.py  error_reporter.py  lexer.py  parser.py  symbol_table.py
src/: __init__.py  ast_nodes.py  cli.py  error_reporter.py  symbol_table.py
tests/: test_codegen.py  test_comprehensive.py  test_functions_arrays.py  test_integration.py  test_lexer.py  test_parser.py
tests/fixtures/: div_by_zero_literal.np  division_by_zero.np  for_loop.np  hello.np  if_example.np  simple.np  simple_test.np  variables.np  while_loop.np  while_simple.np
